--- a/Poll/Poll/Storyboards/Base.lproj/Main.storyboard
+++ b/Poll/Poll/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qkP-lm-GsB">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,9 +19,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="Kbo-am-QwL" kind="relationship" relationship="viewControllers" id="XRa-MD-bD5"/>
-                        <segue destination="j6t-vz-u7s" kind="relationship" relationship="viewControllers" id="801-OP-k67"/>
-                        <segue destination="Vck-Mh-7ha" kind="relationship" relationship="viewControllers" id="aZa-jb-rhr"/>
+                        <segue destination="Vck-Mh-7ha" kind="relationship" relationship="viewControllers" id="a8q-f2-hVb"/>
+                        <segue destination="Kbo-am-QwL" kind="relationship" relationship="viewControllers" id="vnf-5r-59g"/>
+                        <segue destination="j6t-vz-u7s" kind="relationship" relationship="viewControllers" id="ab7-3N-jl8"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ILU-Wu-tqB" userLabel="First Responder" sceneMemberID="firstResponder"/>
