--- a/Poll/Poll/Storyboards/Results.storyboard
+++ b/Poll/Poll/Storyboards/Results.storyboard
@@ -25,11 +25,11 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="FUQ-ON-9hT">
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="FUQ-ON-9hT">
                                             <rect key="frame" x="8" y="8" width="359" height="43.5"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Uzm-xE-kRG">
-                                                    <rect key="frame" x="0.0" y="0.0" width="359" height="20.5"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="lastBaseline" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Uzm-xE-kRG">
+                                                    <rect key="frame" x="0.0" y="0.0" width="359" height="27"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lNz-KZ-lnh">
                                                             <rect key="frame" x="0.0" y="0.0" width="43.5" height="20.5"/>
@@ -38,7 +38,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4UA-zj-FwN">
-                                                            <rect key="frame" x="55.5" y="0.0" width="303.5" height="20.5"/>
+                                                            <rect key="frame" x="55.5" y="1.5" width="303.5" height="18"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -46,7 +46,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rYi-xW-e9N">
-                                                    <rect key="frame" x="0.0" y="20.5" width="359" height="23"/>
+                                                    <rect key="frame" x="0.0" y="29" width="359" height="14.5"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
