Added VoteControllerProtocol conformance to the three VCs

--- a/Poll/Results.storyboard
+++ b/Poll/Results.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="gYV-8i-Ud9" detailTextLabel="ODW-Rh-e1D" style="IBUITableViewCellStyleValue1" id="cGj-hA-QlS">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="VoteCell" textLabel="gYV-8i-Ud9" detailTextLabel="ODW-Rh-e1D" style="IBUITableViewCellStyleValue1" id="cGj-hA-QlS">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cGj-hA-QlS" id="XQg-dk-0sj">
