--- a/Poll/Poll/Stroyboards/Combined.storyboard
+++ b/Poll/Poll/Stroyboards/Combined.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Combined View Controller-->
+        <!--Combined-->
         <scene sceneID="MbT-52-0X6">
             <objects>
                 <viewController id="qMY-Ik-GT6" customClass="CombinedViewController" customModule="Poll" customModuleProvider="target" sceneMemberID="viewController">
@@ -25,7 +25,7 @@
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tWF-qj-hNx">
-                                <rect key="frame" x="0.0" y="330" width="375" height="337"/>
+                                <rect key="frame" x="0.0" y="330" width="375" height="288"/>
                                 <connections>
                                     <segue destination="jeC-iG-Una" kind="embed" identifier="ResultsSegue" id="9nC-kr-p1u"/>
                                 </connections>
@@ -44,6 +44,8 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cwk-8v-yO5"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Combined" id="WEC-l4-p8O"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zdw-qU-dFN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
