--- a/Poll/Poll/Stroyboards/Results.storyboard
+++ b/Poll/Poll/Stroyboards/Results.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Results Table View Controller-->
+        <!--Results-->
         <scene sceneID="xd1-63-roQ">
             <objects>
                 <tableViewController id="hIk-d9-vQs" customClass="ResultsTableViewController" customModule="Poll" customModuleProvider="target" sceneMemberID="viewController">
@@ -48,6 +48,8 @@
                             <outlet property="delegate" destination="hIk-d9-vQs" id="35J-oi-eqV"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Results" id="z0d-er-j9A"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V2N-jZ-Z5f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
