--- a/Poll/Poll/Stroyboards/Voting.storyboard
+++ b/Poll/Poll/Stroyboards/Voting.storyboard
@@ -11,7 +11,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Voting View Controller-->
+        <!--Voting-->
         <scene sceneID="2He-Lc-erx">
             <objects>
                 <viewController id="vxp-VW-Abd" customClass="VotingViewController" customModule="Poll" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,25 +20,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What is your favorite color?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5hM-dw-SHD">
-                                <rect key="frame" x="16" y="171" width="343" height="21"/>
+                                <rect key="frame" x="83" y="32" width="209" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Zc-hr-YWB">
-                                <rect key="frame" x="16" y="279" width="343" height="30"/>
+                                <rect key="frame" x="16" y="109" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your Response" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iNJ-4x-vTN">
-                                <rect key="frame" x="16" y="317" width="343" height="30"/>
+                                <rect key="frame" x="16" y="71" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6J9-GI-r9r">
-                                <rect key="frame" x="128" y="444" width="119" height="30"/>
+                                <rect key="frame" x="163" y="147" width="49" height="30"/>
                                 <state key="normal" title="Submit"/>
                                 <connections>
                                     <action selector="submitButtonAction:" destination="vxp-VW-Abd" eventType="touchUpInside" id="mgq-Hi-C2q"/>
@@ -47,21 +47,21 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="5hM-dw-SHD" firstAttribute="top" secondItem="P3u-1Y-1mo" secondAttribute="top" constant="151" id="5dD-ty-zy0"/>
-                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="centerX" secondItem="6J9-GI-r9r" secondAttribute="centerX" id="F2r-ZB-eeg"/>
-                            <constraint firstItem="6J9-GI-r9r" firstAttribute="leading" secondItem="P3u-1Y-1mo" secondAttribute="leading" constant="128" id="LcD-yM-jyw"/>
-                            <constraint firstItem="8Zc-hr-YWB" firstAttribute="leading" secondItem="iNJ-4x-vTN" secondAttribute="leading" id="R4F-ih-Dgy"/>
-                            <constraint firstItem="8Zc-hr-YWB" firstAttribute="top" secondItem="5hM-dw-SHD" secondAttribute="bottom" constant="87" id="c5j-fa-dSF"/>
-                            <constraint firstItem="5hM-dw-SHD" firstAttribute="leading" secondItem="Fl0-9G-WUT" secondAttribute="leadingMargin" id="d4j-gM-td9"/>
-                            <constraint firstItem="8Zc-hr-YWB" firstAttribute="trailing" secondItem="iNJ-4x-vTN" secondAttribute="trailing" id="ehq-n2-Jg0"/>
-                            <constraint firstItem="5hM-dw-SHD" firstAttribute="trailing" secondItem="Fl0-9G-WUT" secondAttribute="trailingMargin" id="nnM-oK-Aky"/>
-                            <constraint firstItem="6J9-GI-r9r" firstAttribute="top" secondItem="iNJ-4x-vTN" secondAttribute="bottom" constant="97" id="qEJ-G5-d70"/>
-                            <constraint firstItem="5hM-dw-SHD" firstAttribute="trailing" secondItem="8Zc-hr-YWB" secondAttribute="trailing" id="qJz-q3-k68"/>
-                            <constraint firstItem="5hM-dw-SHD" firstAttribute="leading" secondItem="8Zc-hr-YWB" secondAttribute="leading" id="xC6-Ux-dpH"/>
-                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="top" secondItem="8Zc-hr-YWB" secondAttribute="bottom" constant="8" symbolic="YES" id="zTJ-Wy-0jW"/>
+                            <constraint firstItem="5hM-dw-SHD" firstAttribute="top" secondItem="P3u-1Y-1mo" secondAttribute="top" constant="12" id="1FF-Zo-FTA"/>
+                            <constraint firstItem="8Zc-hr-YWB" firstAttribute="centerX" secondItem="6J9-GI-r9r" secondAttribute="centerX" id="7he-V9-k1F"/>
+                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="trailing" secondItem="8Zc-hr-YWB" secondAttribute="trailing" id="CUh-wR-gGl"/>
+                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="trailing" secondItem="Fl0-9G-WUT" secondAttribute="trailingMargin" id="Ydl-hC-2Nr"/>
+                            <constraint firstItem="6J9-GI-r9r" firstAttribute="top" secondItem="8Zc-hr-YWB" secondAttribute="bottom" constant="8" symbolic="YES" id="c6G-Wl-5Mp"/>
+                            <constraint firstItem="8Zc-hr-YWB" firstAttribute="top" secondItem="iNJ-4x-vTN" secondAttribute="bottom" constant="8" symbolic="YES" id="duG-Mf-zsT"/>
+                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="leading" secondItem="Fl0-9G-WUT" secondAttribute="leadingMargin" id="f2M-hB-tNx"/>
+                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="leading" secondItem="8Zc-hr-YWB" secondAttribute="leading" id="oaU-m6-UiV"/>
+                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="top" secondItem="5hM-dw-SHD" secondAttribute="bottom" constant="18" id="vEg-mp-3nb"/>
+                            <constraint firstItem="5hM-dw-SHD" firstAttribute="centerX" secondItem="iNJ-4x-vTN" secondAttribute="centerX" id="wli-MQ-SGE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="P3u-1Y-1mo"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Voting" id="5E5-jc-ffV"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="nameTextField" destination="8Zc-hr-YWB" id="exr-cU-bXe"/>
                         <outlet property="responseTextField" destination="iNJ-4x-vTN" id="ZAv-PI-dWz"/>
